<resources>
    <string name="app_name">TheLightBender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="low">Impossibly Low</string>
    <string name="not_as_low">Not as low</string>
    <string name="medium"> Bright </string>
    <string name="bright"> Tres Bright </string>
    <string name="blinding"> Blinding </string>
    <string name="system">Whole system</string>
    <string name="window"> Just this window </string>
    <string name="title"> Adjust the brightness of your screen </string>
    <string name="sys_or_win"> Want to change the brightness for: </string>
</resources>
